# phito-deep

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-develop.yml  publish-main.yml  run-tests.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
examples/: mnist.py
src/phitodeep/: loss.py  model.py  optimization.py
src/phitodeep/layers/: activation.py  base.py
tests/: test_model.py
