[tool.poetry]
name = "phitodeep"
version = "0.1.0"
description = "Deep learning framework built from scratch with numpy!"
authors = ["Ralph Dugue"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
