[tool.poetry]
name = "phitodeep"
version = "0.1.1"
description = "Deep learning framework built from scratch with numpy!"
authors = ["Ralph Dugue"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "phitodeep", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.4"
datasets = "^4.8.4"
pillow = "^12.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "myst-nb (>=1.4.0,<2.0.0)",
    "sphinx-autoapi (>=3.8.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]
